--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@ h1 {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color:honeydew;
 }
+
+p {
+    color: khaki;
+}
